--- a/index.html
+++ b/index.html
@@ -561,7 +561,13 @@ points.append('circle')
           <p>jsancha@carto.com</p>
           <p>@jorgesancha</p>
         </section>
-
+        <section>
+          <h4>One last thing...</h4>
+        </section>
+        <section>
+          <h1>WE ARE HIRING!!</h1>
+          <p>https://carto.com/jobs</p>
+        </section>
 			</div>
 		</div>
 
